--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 |---------------------------|-------------------------|------------------------------------|-------------------------------------|-------------------------|------------------------------------|
 | **Bonsai-Züchter**        | • 5% Transaktionsgebühr | • Zugang zu premium-Kunden         | • Kuratierte seltene Sorten         | • Festpreis + 2% Fee    | **Hobby-Gärtner** (30-60J)         |
 | **Asiatische Importeure** | • €10 Listing-Fee       | • Automatisierte Abrechnung        | • Echtheitszertifikat               | • Abo für Frühzugriff   | **Sammler**                       |
-| **Lokale Handwerker**     | • Keine Grundgebühr     | • Lager-/Logistik-Service          | • Komplettsets (Baum + Zubehör)     |                         | **Urban Professionals** (hohes Einkommen) |
+| **Lokale Handwerkerl**     | • Keine Grundgebühr     | • Lager-/Logistik-Service          | • Komplettsets (Baum + Zubehör)     |                         | **Urban Professionals** (hohes Einkommen) |
 
 |                          |                         | **Tools & Services**               | **Core Interaction**                | **Filter**              |                                   |
 |--------------------------|-------------------------|------------------------------------|-------------------------------------|-------------------------|-----------------------------------|
